更新示例链接

--- a/OpenCV/python/通道分离与合并.md
+++ b/OpenCV/python/通道分离与合并.md
@@ -110,3 +110,5 @@ cv2.imshow("Merged", cv2.merge([B, G, R]))
 cv2.waitKey(0)
 ```
 ### 效果
+![image](https://raw.githubusercontent.com/twangjie/mydoc/master/OpenCV/examples/result/split_merge.jpg)
+
