--- a/OpenCV/python/通道分离与合并.md
+++ b/OpenCV/python/通道分离与合并.md
@@ -1,7 +1,10 @@
-# python实现
+https://github.com/twangjie/mydoc/blob/master/OpenCV/examples/split_merge.py
 
-# 通道分离
-有两种方法，一个是使用OpenCV自带的split 函数，还有一个是使用Numpy数组来分离通道.
+## 通道分离
+有两种方法：
+
+1、使用OpenCV自带的split函数；  
+2、使用Numpy数组来分离通道。
 
 ## 1. 使用OpenCV 自带 split函数
 
@@ -54,7 +57,7 @@ cv2.waitKey(0)
 cv2.destroyAllWindows() 
 ```
 
-# 通道合并
+## 通道合并
 
 通道合并也有两种方法。
 
