生成伪彩色图像

--- a/OpenCV/生成伪彩色图像.md
+++ b/OpenCV/生成伪彩色图像.md
@@ -27,29 +27,45 @@ applyColorMap(im_gray, im_color, COLORMAP_HSV);
 
 import cv2
 import numpy as np
+import matplotlib.pyplot as plt
 
-im_ori = cv2.imread("resframe.jpg", cv2.IMREAD_COLOR)
-im_gray = cv2.imread("resframe.jpg", cv2.IMREAD_GRAYSCALE)
-cv2.imshow("Original", im_ori)
-cv2.imshow("gray", im_gray)
+im_bgr = cv2.imread("resframe.jpg", cv2.IMREAD_COLOR)
+im_rgb = cv2.cvtColor(im_bgr, cv2.COLOR_BGR2RGB)
+im_gray = cv2.cvtColor(im_bgr, cv2.COLOR_BGR2GRAY)
+ret, thresh = cv2.threshold(im_gray, 127, 255,cv2.THRESH_BINARY)
 
-cv2.imshow("COLORMAP_AUTUMN", cv2.applyColorMap(im_gray, cv2.COLORMAP_AUTUMN))
-cv2.imshow("COLORMAP_BONE", cv2.applyColorMap(im_gray, cv2.COLORMAP_BONE))
-cv2.imshow("COLORMAP_JET", cv2.applyColorMap(im_gray, cv2.COLORMAP_JET))
-cv2.imshow("COLORMAP_WINTER", cv2.applyColorMap(im_gray, cv2.COLORMAP_WINTER))
-cv2.imshow("COLORMAP_RAINBOW", cv2.applyColorMap(im_gray, cv2.COLORMAP_RAINBOW))
-cv2.imshow("COLORMAP_OCEAN", cv2.applyColorMap(im_gray, cv2.COLORMAP_OCEAN))
-cv2.imshow("COLORMAP_SUMMER", cv2.applyColorMap(im_gray, cv2.COLORMAP_SUMMER))
-cv2.imshow("COLORMAP_SPRING", cv2.applyColorMap(im_gray, cv2.COLORMAP_SPRING))
-cv2.imshow("COLORMAP_COOL", cv2.applyColorMap(im_gray, cv2.COLORMAP_COOL))
-cv2.imshow("COLORMAP_HSV", cv2.applyColorMap(im_gray, cv2.COLORMAP_HSV))
-cv2.imshow("COLORMAP_PINK", cv2.applyColorMap(im_gray, cv2.COLORMAP_PINK))
-cv2.imshow("COLORMAP_HOT", cv2.applyColorMap(im_gray, cv2.COLORMAP_HOT))
+titles = [
+    'bgr','rgb','gray','binary',
+    'COLORMAP_AUTUMN','COLORMAP_BONE','COLORMAP_JET','COLORMAP_WINTER','COLORMAP_RAINBOW','COLORMAP_OCEAN',
+    'COLORMAP_SUMMER','COLORMAP_SPRING','COLORMAP_COOL','COLORMAP_HSV','COLORMAP_PINK','COLORMAP_HOT'
+]
 
+coloredImgs=[
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_AUTUMN),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_BONE),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_JET),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_WINTER),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_RAINBOW),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_OCEAN),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_SUMMER),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_SPRING),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_COOL),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_HSV),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_PINK),
+    cv2.applyColorMap(im_gray, cv2.COLORMAP_HOT)
+]
 
-cv2.waitKey(0)
+images = [im_bgr,im_rgb,im_gray,thresh]
+for i in range(12):
+    images.append(cv2.cvtColor(coloredImgs[i], cv2.COLOR_BGR2RGB))
+
+for i in range(16):
+    plt.subplot(4,4,i+1),plt.imshow(images[i],'gray')
+    plt.title(titles[i])
+    plt.xticks([]),plt.yticks([])
+
+plt.show()
 
 ```
 ### 效果
 ![image](https://raw.githubusercontent.com/twangjie/mydoc/master/OpenCV/examples/result/pseudocolor.jpg)
-
